Attempt at a patch for SR-14053 and SR-14218, based on Dan Zheng's initial fix.